benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_NormalizeBitString_iter2_error.log
=== Verification Error - Iteration 2 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_NormalizeBitString.rs
Time: 2025-09-15 18:48:09

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0277]: can't compare `&char` with `char`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_NormalizeBitString_impl.rs:36:14
   |
36 |         if c == '1' {
   |              ^^ no implementation for `&char == char`
   |
   = help: the trait `std::cmp::PartialEq<char>` is not implemented for `&char`
help: consider dereferencing here
   |
36 |         if *c == '1' {
   |            +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.

--------------------------------------------------------------------------------

Additional Output:
error[E0277]: can't compare `&char` with `char`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_NormalizeBitString_impl.rs:36:14
   |
36 |         if c == '1' {
   |              ^^ no implementation for `&char == char`
   |
   = help: the trait `std::cmp::PartialEq<char>` is not implemented for `&char`
help: consider dereferencing here
   |
36 |         if *c == '1' {
   |            +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
